Relatorio - OKAY; Ajuda = OKAY; Colaborador = OKAY

--- a/src/view/Ajuda/apresentarAjuda.html
+++ b/src/view/Ajuda/apresentarAjuda.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="/style/mainStyle.css">
     <link rel="stylesheet" href="/style/pagetable.css">
     <link rel="stylesheet" href="/style/formStyle.css">
-    <link rel="stylesheet" href="/style/atividade.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
 
@@ -79,48 +78,21 @@
     </div>
     
     <div class="main">
-        <h1>Venda</h1>
-        <form>
+        <h1>
+            Ajuda ao Usuário
+        </h1>
+
+        <form action="/ajuda" method="POST">
+
             <fieldset class="dados-Top">
-
-                {%if tamanhoVenda == 0%}
-
-                <p class="mensagem">Não há nenhuma venda em aberto</p>
-
-                {%else%}
-
-                <div class="conjunto-caixas">
-                    {%for venda in vendas%}
-                    <div class="caixa-conteudo">
-                        <p class="title"> {{venda.nome_cliente}}</p>
-                        <p class="conteudo"> <strong>DATA ENTREGA:</strong> {{venda.data_entrega}}</p>
-                        <p class="conteudo"><strong>ITENS: </strong>{{venda.produtos}}</p>
-                        <a href={{venda.rota}}>Acessar</a>
-                    </div>
-                    {%endfor%}
+                <div class="title">
+                    <legend>{{titulo}}</legend>
                 </div>
-
-                {%endif%}
-                
-                
-
-                <a href="/criarVenda" class="button-footer">
-                    <img src="/imagem/venda.png" alt="Comprar">
-                    <p>Vender</p>
-                </a>
-            </fieldset>
-        </form>
-
-        <div class="foot-dados-Botton">
-            <div class="aviso-foot">
-                <p>Caso queira cadastrar ou visualizar os seus clientes</p>
-            </div>
-            <div class="acoes-n-banco">
-                <a href="/cliente" id="cadastrar-banco"> <p>Cliente</p> </a>
-            </div>
-        </div>
-
-
+                {%for item in manual%}
+                    <p style="font-size: 1.7rem;">{{item}}</p>
+                {%endfor%}
+            </fieldset>         
+        </form>  
     </div>
 </body>
 </html>
