--- a/src/view/Financiamento/financiamento.html
+++ b/src/view/Financiamento/financiamento.html
@@ -100,7 +100,7 @@
         
         <a href="/criarFinanciamento" class="button-footer">
             <img src="/imagem/financiamento.png" alt="Novo Financiamento">
-            <p>Cadastrar Financiar</p>
+            <p>Cadastrar Financiamento</p>
         </a>
 
         
