--- a/src/view/loginPage.html
+++ b/src/view/loginPage.html
@@ -33,7 +33,7 @@
 
             <button class="botao" type="submit">Entrar</button>
 
-            <a href="esqueceuSenha.html">Esqueci minha senha</a>
+            <!-- <a href="esqueceuSenha.html">Esqueci minha senha</a> -->
         </form>
     </div>
 
